FromClientes y Llenar tabla OK
falta nomas el buscador para agregar los otros metodos de busqueda y ya queda